--- a/btcillustrated/delta.html
+++ b/btcillustrated/delta.html
@@ -1,25 +1,104 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h2>Delay between two blocks</h2>
-<table>
-  <tr><th><a href="delta_2009.png" target="_blank"><img src="delta_2009.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2010.png" target="_blank"><img src="delta_2010.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2011.png" target="_blank"><img src="delta_2011.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2012.png" target="_blank"><img src="delta_2012.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2013.png" target="_blank"><img src="delta_2013.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2014.png" target="_blank"><img src="delta_2014.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2015.png" target="_blank"><img src="delta_2015.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2016.png" target="_blank"><img src="delta_2016.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2017.png" target="_blank"><img src="delta_2017.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2018.png" target="_blank"><img src="delta_2018.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2019.png" target="_blank"><img src="delta_2019.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2020.png" target="_blank"><img src="delta_2020.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2021.png" target="_blank"><img src="delta_2021.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2022.png" target="_blank"><img src="delta_2022.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2023.png" target="_blank"><img src="delta_2023.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2024.png" target="_blank"><img src="delta_2024.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="delta_2025.png" target="_blank"><img src="delta_2025.png" width="100%" height="auto"></a></th></tr>
-</table>
+<head>
+    <title>Block Delay Distribution - BTCIllustrated.com</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .chart-container {
+            margin-bottom: 2rem;
+        }
+        .chart-image {
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .container-95 {
+            width: 95%;
+            max-width: 95%;
+            margin: 0 auto;
+        }
+        .back-link {
+            margin-bottom: 2rem;
+        }
+    </style>
+</head>
+<body class="bg-light">
+    <div class="container-95 py-5">
+        <header class="text-center mb-5">
+            <h1 class="display-4">Block Delay Distribution</h1>
+            <p class="lead">Time between consecutive blocks in the Bitcoin blockchain</p>
+            <a href="index.html" class="btn btn-outline-primary back-link">← Back to Home</a>
+        </header>
+
+        <div class="row">
+            <!-- Yearly Charts Section -->
+            <div class="col-12 chart-container">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h3 class="card-title">Yearly Distributions</h3>
+                        <div class="card-text">
+                            <p>These charts show how the block delay distribution has evolved over time, year by year.</p>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <a href="delta_2009.png" target="_blank"><img src="delta_2009.png" class="img-fluid chart-image" alt="2009 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2010.png" target="_blank"><img src="delta_2010.png" class="img-fluid chart-image" alt="2010 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2011.png" target="_blank"><img src="delta_2011.png" class="img-fluid chart-image" alt="2011 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2012.png" target="_blank"><img src="delta_2012.png" class="img-fluid chart-image" alt="2012 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2013.png" target="_blank"><img src="delta_2013.png" class="img-fluid chart-image" alt="2013 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2014.png" target="_blank"><img src="delta_2014.png" class="img-fluid chart-image" alt="2014 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2015.png" target="_blank"><img src="delta_2015.png" class="img-fluid chart-image" alt="2015 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2016.png" target="_blank"><img src="delta_2016.png" class="img-fluid chart-image" alt="2016 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2017.png" target="_blank"><img src="delta_2017.png" class="img-fluid chart-image" alt="2017 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2018.png" target="_blank"><img src="delta_2018.png" class="img-fluid chart-image" alt="2018 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2019.png" target="_blank"><img src="delta_2019.png" class="img-fluid chart-image" alt="2019 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2020.png" target="_blank"><img src="delta_2020.png" class="img-fluid chart-image" alt="2020 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2021.png" target="_blank"><img src="delta_2021.png" class="img-fluid chart-image" alt="2021 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2022.png" target="_blank"><img src="delta_2022.png" class="img-fluid chart-image" alt="2022 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2023.png" target="_blank"><img src="delta_2023.png" class="img-fluid chart-image" alt="2023 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2024.png" target="_blank"><img src="delta_2024.png" class="img-fluid chart-image" alt="2024 Block Delay"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="delta_2025.png" target="_blank"><img src="delta_2025.png" class="img-fluid chart-image" alt="2025 Block Delay"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
