--- a/btcillustrated/scriptpubkeys.html
+++ b/btcillustrated/scriptpubkeys.html
@@ -1,25 +1,104 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h2>ScriptPubKeys usage</h2>
-<table>
-  <tr><th><a href="scriptpubkeys_2009.png" target="_blank"><img src="scriptpubkeys_2009.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2010.png" target="_blank"><img src="scriptpubkeys_2010.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2011.png" target="_blank"><img src="scriptpubkeys_2011.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2012.png" target="_blank"><img src="scriptpubkeys_2012.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2013.png" target="_blank"><img src="scriptpubkeys_2013.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2014.png" target="_blank"><img src="scriptpubkeys_2014.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2015.png" target="_blank"><img src="scriptpubkeys_2015.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2016.png" target="_blank"><img src="scriptpubkeys_2016.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2017.png" target="_blank"><img src="scriptpubkeys_2017.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2018.png" target="_blank"><img src="scriptpubkeys_2018.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2019.png" target="_blank"><img src="scriptpubkeys_2019.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2020.png" target="_blank"><img src="scriptpubkeys_2020.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2021.png" target="_blank"><img src="scriptpubkeys_2021.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2022.png" target="_blank"><img src="scriptpubkeys_2022.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2023.png" target="_blank"><img src="scriptpubkeys_2023.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2024.png" target="_blank"><img src="scriptpubkeys_2024.png" width="100%" height="auto"></a></th></tr>
-  <tr><th><a href="scriptpubkeys_2025.png" target="_blank"><img src="scriptpubkeys_2025.png" width="100%" height="auto"></a></th></tr>
-</table>
+<head>
+    <title>ScriptPubKeys Distribution - BTCIllustrated.com</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .chart-container {
+            margin-bottom: 2rem;
+        }
+        .chart-image {
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .container-95 {
+            width: 95%;
+            max-width: 95%;
+            margin: 0 auto;
+        }
+        .back-link {
+            margin-bottom: 2rem;
+        }
+    </style>
+</head>
+<body class="bg-light">
+    <div class="container-95 py-5">
+        <header class="text-center mb-5">
+            <h1 class="display-4">ScriptPubKeys Distribution</h1>
+            <p class="lead">Distribution of script types in the Bitcoin blockchain</p>
+            <a href="index.html" class="btn btn-outline-primary back-link">← Back to Home</a>
+        </header>
+
+        <div class="row">
+            <!-- Yearly Charts Section -->
+            <div class="col-12 chart-container">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h3 class="card-title">Yearly Distributions</h3>
+                        <div class="card-text">
+                            <p>These charts show how the script type distribution has evolved over time, year by year.</p>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2009.png" target="_blank"><img src="scriptpubkeys_2009.png" class="img-fluid chart-image" alt="2009 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2010.png" target="_blank"><img src="scriptpubkeys_2010.png" class="img-fluid chart-image" alt="2010 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2011.png" target="_blank"><img src="scriptpubkeys_2011.png" class="img-fluid chart-image" alt="2011 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2012.png" target="_blank"><img src="scriptpubkeys_2012.png" class="img-fluid chart-image" alt="2012 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2013.png" target="_blank"><img src="scriptpubkeys_2013.png" class="img-fluid chart-image" alt="2013 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2014.png" target="_blank"><img src="scriptpubkeys_2014.png" class="img-fluid chart-image" alt="2014 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2015.png" target="_blank"><img src="scriptpubkeys_2015.png" class="img-fluid chart-image" alt="2015 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2016.png" target="_blank"><img src="scriptpubkeys_2016.png" class="img-fluid chart-image" alt="2016 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2017.png" target="_blank"><img src="scriptpubkeys_2017.png" class="img-fluid chart-image" alt="2017 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2018.png" target="_blank"><img src="scriptpubkeys_2018.png" class="img-fluid chart-image" alt="2018 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2019.png" target="_blank"><img src="scriptpubkeys_2019.png" class="img-fluid chart-image" alt="2019 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2020.png" target="_blank"><img src="scriptpubkeys_2020.png" class="img-fluid chart-image" alt="2020 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2021.png" target="_blank"><img src="scriptpubkeys_2021.png" class="img-fluid chart-image" alt="2021 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2022.png" target="_blank"><img src="scriptpubkeys_2022.png" class="img-fluid chart-image" alt="2022 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2023.png" target="_blank"><img src="scriptpubkeys_2023.png" class="img-fluid chart-image" alt="2023 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2024.png" target="_blank"><img src="scriptpubkeys_2024.png" class="img-fluid chart-image" alt="2024 ScriptPubKeys Distribution"></a>
+                            </div>
+                            <div class="col-12">
+                                <a href="scriptpubkeys_2025.png" target="_blank"><img src="scriptpubkeys_2025.png" class="img-fluid chart-image" alt="2025 ScriptPubKeys Distribution"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
