shows price from blockchain data

--- a/btcillustrated/index.html
+++ b/btcillustrated/index.html
@@ -63,8 +63,8 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Nonce Distribution Section -->
+            
+             <!-- Nonce Distribution Section -->
             <div class="col-12 chart-container">
                 <div class="card h-100">
                     <div class="card-body">
@@ -74,6 +74,18 @@
                         </p>
                         <a href="nonce_full.png" target="_blank">
                             <img src="nonce_full.png" class="img-fluid chart-image" alt="Nonce Distribution">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Price from blockchain data Section -->
+            <div class="col-12 chart-container">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h3 class="card-title">Price from blockchain data</h3>
+                        <a href="price_size_full.png" target="_blank">
+                            <img src="price_size_full.png" class="img-fluid chart-image" alt="Price from blockchain data">
                         </a>
                     </div>
                 </div>
@@ -92,6 +104,7 @@
                                 <li><a href="https://github.com/valerio-vaccaro/scriptpubkeys_per_block" target="_blank" class="btn btn-outline-secondary btn-sm">scriptpubkeys_per_block</a></li>
                             </ul>
                             <p>You can download the <a href="scriptpubkeys_per_block.csv" target="_blank" class="btn btn-outline-secondary btn-sm">Dataset</a> used for these charts and update daily.</p>
+                            <p>Price from blockchain data dataset is realized by Riccardo Casatta - https://twitter.com/RCasatta (tnx again!)</p>
                             <p>Last update on:  <div id="includedTimestamp"></div></p>
                         </div>
                     </div>
